--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,22 @@ android {
     dataBinding {
         enabled = true
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+        exclude 'META-INF/rxjava.properties'
+
+    }
+
 }
 
 dependencies {
@@ -39,9 +55,9 @@ dependencies {
     kapt "com.android.databinding:compiler:$android_plugin_version"
 
     //Dagger
-    compile 'com.google.dagger:dagger:2.10'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+//    compile "com.google.dagger:dagger:$DAGGER_VERSION"
+//    kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+//    provided 'org.glassfish:javax.annotation:10.0-b28'
 
     /**
      * Reactive Programming
@@ -64,6 +80,11 @@ dependencies {
 
     //Module Dependencies
     compile project(':abstractionsAndUtils')
+
+    //Leak Canary to check memory leaks
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
 }
 
 kapt {
