--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:name=".ThisApp"
         android:theme="@style/AppTheme">
-        <activity android:name=".views.activities.MainActivity">
+        <activity android:name=".views.activities.MainActivity"
+        android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
