--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'realm-android'
 
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -55,9 +56,9 @@ dependencies {
     kapt "com.android.databinding:compiler:$android_plugin_version"
 
     //Dagger
-//    compile "com.google.dagger:dagger:$DAGGER_VERSION"
-//    kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
-//    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile "com.google.dagger:dagger:$DAGGER_VERSION"
+    kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+    compile 'org.glassfish:javax.annotation:10.0-b28'
 
     /**
      * Reactive Programming
@@ -75,6 +76,10 @@ dependencies {
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta1'
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
+    //okHTTP
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+
     //GSON
     compile 'com.google.code.gson:gson:2.8.0'
 
@@ -85,6 +90,8 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+
+
 }
 
 kapt {
