--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlin_version = '1.1.2-4'
     ext.SUPPORT_LIBRARY_VERSION = '25.3.1'
@@ -8,11 +7,13 @@ buildscript {
     ext.PLAY_SERVICES_VERSION = '10.2.6'
     ext.DAGGER_VERSION = '2.10'
     ext.android_plugin_version = '2.3.2'
+    ext.gradle_plugin_version = '3.0.0-alpha4'
+
     repositories {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath "com.android.tools.build:gradle:$gradle_plugin_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.realm:realm-gradle-plugin:2.3.1'
 
