--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.1.2-4'
-    ext.SUPPORT_LIBRARY_VERSION = '25.3.1'
+    ext.kotlin_version = '1.2.51'
+    ext.SUPPORT_LIBRARY_VERSION = '27.1.1'
     ext.RETROFIT_VERSION = '2.3.0'
     ext.RXJAVA_VERSION = '2.0.1'
     ext.PLAY_SERVICES_VERSION = '10.2.6'
     ext.DAGGER_VERSION = '2.10'
-    ext.android_plugin_version = '2.3.2'
-    ext.gradle_plugin_version = '3.0.0-alpha4'
+    ext.gradle_plugin_version = '3.1.3'
 
     repositories {
         jcenter()
+        google()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        maven { url 'https://maven.fabric.io/public' }
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_plugin_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.realm:realm-gradle-plugin:2.3.1'
+        classpath 'io.fabric.tools:gradle:1.+'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -29,6 +36,7 @@ allprojects {
         maven{
             url 'https://oss.sonatype.org/content/repositories/snapshots/'
         }
+        google()
     }
 }
 
